Fixed initally opening sidebar on mobile [#172017306]

--- a/src/components/Layout/components/Sidebar/SideBar.module.scss
+++ b/src/components/Layout/components/Sidebar/SideBar.module.scss
@@ -26,6 +26,19 @@
 
 .slide {
   transition: all 200ms ease-in-out;
+  right: -$sidebar-width;
+
+  @include media-breakpoint-up(md) {
+    right: -$sidebar-width-md;
+  }
+
+  @include media-breakpoint-up(lg) {
+    right: -$sidebar-width-lg;
+  }
+
+  @include media-breakpoint-up(xl) {
+    right: -$sidebar-width-xl;
+  }
 
   &--enter {
     right: -$sidebar-width;
